# pipelines_standalone

./: .gitignore  .promptignore  Adding a type.md  README.md  pyproject.toml  requirements copy.txt  requirements.txt  requirements_2.txt  test  test(1).yaml  test.md  x.json
custom_types/BIB/examples/: bib1.bib
custom_types/HTML/: type.py
custom_types/HTML/examples/: html1.html
custom_types/INT/: type.py
custom_types/PROMPT/: type.py
custom_types/PROMPT/examples/: prompt2.prompt
custom_types/PUBMED/: type.py
custom_types/PUBMED/examples/: pubmed1.pubmed
custom_types/TXT/: type.py
custom_types/TXT/examples/: bib3.bib
custom_types/XLSX/examples/: excel1.xlsx
docs/: how_and_where_to_work.md  how_to_write_pipelines.md  how_to_write_types.md
pipelines/: _SFP_bool.py  _SFP_json.py  _SFP_pubmed.py  _SFP_txt.py  _SFP_url.py  _multi_feed_pipeline.py  _single_feed_pipeline.py
pipelines/CONNECTORS/BLENDS/: pdf2txt.py
pipelines/CONNECTORS/INSTAGRAM/: CREATE_CAROUSEL.py
pipelines/CONVERSIONS/: wrap_2_txts_in_dic.py  wrap_txt_in_dic.py
pipelines/EMBEDDINGS/: clusterize.py  topk_jsonl_dict.py
pipelines/LLMS_v2/: prompt_output.py
pipelines/PROMPTING/: add_raw.py  initialize_dict.py  initialize_raw.py
pipelines/TESTS/: 2_calculate.py  add_final_score.py  concat_2.py  extract_images.py  plan_json_builder.py
src/: _SFP_author.py  bp.jsonl  converter copy.py  converter.py  d.json  dev.json  final.txt  fr.html  google_scraping_bee.py  lucario.lucario  out.sota  pipelines.blueprints  plan  prompt.md  r.konectstrukt  r.r  results.json  test_graph.graphml  v2.sota  x.json
src/custom_types/: wrapper.py
src/pipelines/: _SFP_bib.py  _SFP_html.py  _SFP_jsonl.py  _SFP_prompt.py  _SFP_xlsx.py  _duplicate.py  _single_feed_pipeline.py
src/pipelines_standalone/: __init__.py
src/utils/: booleans.py  yaml.py
(+429 files in other folders)
